@@ -133,6 +133,10 @@ bool ImGuiEx::Canvas::Begin(ImGuiID id, const ImVec2& size)
 
     EnterLocalSpace();
 
+# if IMGUI_VERSION_NUM >= 18967
+    ImGui::SetNextItemAllowOverlap();
+# endif
+
     // Emit dummy widget matching bounds of the canvas.
     ImGui::SetCursorScreenPos(m_ViewRect.Min);
     ImGui::Dummy(m_ViewRect.GetSize());
@@ -164,7 +168,9 @@ void ImGuiEx::Canvas::End()
 
     ImGui::GetCurrentWindow()->DC.CursorMaxPos = m_WindowCursorMaxBackup;
 
+# if IMGUI_VERSION_NUM < 18967
     ImGui::SetItemAllowOverlap();
+# endif
 
     // Emit dummy widget matching bounds of the canvas.
     ImGui::SetCursorScreenPos(m_WidgetPosition);
